  * Separate resume configuration file handling from other ramdisk
    configuration file handling.
  * AMD CPU family 15 systems (i.e. K8) should be allowed to install K7
    kernels.
  * Fix quoting so that LVM (but not crypto) installs don't break due to the
    lack of dmsetup-udeb.

  [ Frans Pop ]
  * Use separate variable for selected ramdisk generator.

 -- Frans Pop <fjp@debian.org>  Thu, 13 Jul 2006 12:13:10 +0200

base-installer (1.63) unstable; urgency=low

  * Set meta package as default kernel for S/390.
  * Remove code for determining KERNEL_ABI from testsuite as it is now unused
    and as it is broken anyway if the first wanted kernel is a meta package.
  * Be more conservative when setting a generic default for kernel selection.
  * Run vgscan in-target during create_devices as it needs /sys mounted; if
    not, the kernel can get loads of ghost RAID devices in /sys/block.
  * Avoid warnings from lvm2 tools about open file descriptors.

 -- Frans Pop <fjp@debian.org>  Tue, 11 Jul 2006 14:10:38 +0200

base-installer (1.62) unstable; urgency=low

  [ Martin Michlmayr ]
  * RiscPC has been renamed from riscpc to rpc.
  * Add RiscPC to the testsuite.

  [ Colin Watson ]
  * Add empty binary-indep target in debian/rules, per policy.

 -- Martin Michlmayr <tbm@cyrius.com>  Mon, 03 Jul 2006 17:40:31 +0200

base-installer (1.61) unstable; urgency=low

  [ David Härdeman ]
  * If we have any dm-crypt devices, install cryptsetup before the
    initramfs image is generated. Closes: #375928.

  [ Updated translations ]
  * Estonian (et.po) by Siim Põder
  * Norwegian Nynorsk (nn.po) by Håvard Korsvoll

 -- Frans Pop <fjp@debian.org>  Fri, 30 Jun 2006 13:55:39 +0200

base-installer (1.60) unstable; urgency=low

  * Support finish-install, both by installing the script there and for
    searching for templates in its namespace in the fallback code for
    post-base-installer hooks.

  [ Updated translations ]
  * Lithuanian (lt.po) by Kęstutis Biliūnas
