@@ -2,7 +2,7 @@ cpuinfo b180.cpuinfo
 machine parisc
 majors 2.6
 flavour parisc
-kernel-2.6 linux-image-parisc
+kernel-2.6 linux-image-2.6-parisc
 usable \
   kernel-image-2.6.8-2-32 \
   kernel-image-2.6.8-2-32-smp \
