@@ -3,8 +3,8 @@ machine parisc64
 majors 2.6
 flavour parisc64
 kernel-2.6 \
-  linux-image-parisc64-smp \
-  linux-image-parisc64
+  linux-image-2.6-parisc64-smp \
+  linux-image-2.6-parisc64
 usable \
   kernel-image-2.6.8-2-32 \
   kernel-image-2.6.8-2-32-smp \
