@@ -13,8 +13,9 @@ base-installer (1.64) UNRELEASED; urgency=low
 
   [ Frans Pop ]
   * Use separate variable for selected ramdisk generator.
+  * Select kernel meta package for current kernel major version for hppa.
 
- -- Frans Pop <fjp@debian.org>  Thu, 13 Jul 2006 12:13:10 +0200
+ -- Frans Pop <fjp@debian.org>  Sat, 29 Jul 2006 20:16:23 +0200
 
 base-installer (1.63) unstable; urgency=low
 
